# detox

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: tests.rs  tests_args.rs  tests_main.rs  tests_print_output.rs  tests_rename.rs
